[gd_scene load_steps=16 format=2]

[ext_resource path="res://engine/sprites/objects/upgrade_station/console.png" type="Texture" id=1]
[ext_resource path="res://engine/sprites/objects/upgrade_station/screen_mask.png" type="Texture" id=2]
[ext_resource path="res://engine/scenes/ui/notifications/ButtonPopup/ButtonPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/scenes/objects/upgrade_station/UpgradeStation.gd" type="Script" id=4]
[ext_resource path="res://engine/fonts/Pixel-Life.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://engine/scenes/ui/upgrade_station_menu/UpgradeInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://engine/scenes/ui/button_prompt/ButtonPrompt.tscn" type="PackedScene" id=7]
[ext_resource path="res://engine/scenes/ui/FancyLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/0.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float whitening;
uniform bool enabled;

void fragment() {
	if (enabled) {
	    vec4 texture_color = texture(TEXTURE, UV);
	    COLOR = vec4(mix(texture_color.rgb, vec3(1,1,1), whitening), texture_color.a);
	}
	else {
		COLOR = texture(TEXTURE, UV)
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/whitening = 0.0
shader_param/enabled = false

[sub_resource type="Animation" id=5]
resource_name = "close_cofirmation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ConfirmationWindow:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.203063 ),
"update": 0,
"values": [ Vector2( 219, -491 ), Vector2( 899, -491 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ConfirmationWindow:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.203063 ),
"update": 0,
"values": [ Vector2( 680, 981 ), Vector2( 0, 981 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Items/SelectionIndicator:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.282353 ), Color( 0, 0, 0, 0.282353 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "open_confirmation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ConfirmationWindow:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.203063 ),
"update": 0,
"values": [ Vector2( 899, -491 ), Vector2( 219, -491 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ConfirmationWindow:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.203063 ),
"update": 0,
"values": [ Vector2( 0, 981 ), Vector2( 680, 981 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Items/SelectionIndicator:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.282353 ), Color( 1, 1, 1, 0.282353 ) ]
}

[node name="UpgradeStation" type="Area2D"]
pause_mode = 2
collision_layer = 524288
script = ExtResource( 4 )

[node name="Console" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ScreenMask" type="Sprite" parent="."]
self_modulate = Color( 0, 0.545098, 0.870588, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="ButtonPopup" parent="." instance=ExtResource( 3 )]

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -118.0
margin_bottom = -118.0
rect_scale = Vector2( 0.175, 0.175 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -899.0
margin_top = -490.5
margin_right = 899.0
margin_bottom = 490.5
color = Color( 0.0509804, 0.113725, 0.152941, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Control" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -853.145
margin_top = -464.0
margin_right = 218.855
margin_bottom = 464.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group" parent="Menu/Items" instance=ExtResource( 8 )]
position = Vector2( 538.859, -8.46741 )
scale = Vector2( 3, 3 )
background_colour = Color( 0, 0, 0, 0 )

[node name="Line2D" type="Line2D" parent="Menu/Items/Group"]
position = Vector2( -178.041, 29.9679 )
scale = Vector2( 38.6381, 1 )
points = PoolVector2Array( 0, 0, 10, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="ZeroPosition" type="Position2D" parent="Menu/Items"]
position = Vector2( 0, 115.429 )

[node name="SelectionIndicator" type="ColorRect" parent="Menu/Items"]
pause_mode = 2
anchor_top = -0.354064
anchor_bottom = -0.354064
margin_top = 444.0
margin_right = 1536.0
margin_bottom = 572.0
rect_min_size = Vector2( 1536, 128 )
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0, 0, 0, 0.282353 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Menu/Items/SelectionIndicator"]

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Items"]
margin_top = 115.429
margin_right = 1536.0
margin_bottom = 1575.43
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeInfo" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1536.0
margin_bottom = 128.0

[node name="UpgradeInfo2" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 148.0
margin_right = 1536.0
margin_bottom = 276.0

[node name="UpgradeInfo3" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 296.0
margin_right = 1536.0
margin_bottom = 424.0

[node name="UpgradeInfo8" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 444.0
margin_right = 1536.0
margin_bottom = 572.0

[node name="UpgradeInfo9" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 592.0
margin_right = 1536.0
margin_bottom = 720.0

[node name="UpgradeInfo10" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 740.0
margin_right = 1536.0
margin_bottom = 868.0

[node name="UpgradeInfo4" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 888.0
margin_right = 1536.0
margin_bottom = 1016.0

[node name="UpgradeInfo5" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1036.0
margin_right = 1536.0
margin_bottom = 1164.0

[node name="UpgradeInfo6" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1184.0
margin_right = 1536.0
margin_bottom = 1312.0

[node name="UpgradeInfo7" parent="Menu/Items/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1332.0
margin_right = 1536.0
margin_bottom = 1460.0

[node name="Data" type="Control" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 266.667
margin_top = -420.0
margin_right = 851.667
margin_bottom = 456.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -71.0
margin_right = 46.0
margin_bottom = 34.0
color = Color( 0, 0, 0, 0.282353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Menu/Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -305.0
custom_fonts/font = SubResource( 2 )
text = "Alter the frame of missiles to be more aerodynamic, leading to an increase in travel speed. Applies to both standard missiles and super missiles."
align = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="Menu/Data"]
margin_left = 55.0
margin_top = 609.593
margin_right = 663.0
margin_bottom = 669.593
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "Cost: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnedLabel" type="Label" parent="Menu/Data/CostLabel"]
margin_left = 371.666
margin_right = 920.666
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Owned: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatedLabel" type="Label" parent="Menu/Data"]
margin_left = 55.0
margin_top = 697.593
margin_right = 663.0
margin_bottom = 757.593
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "Created: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaximumLabel" type="Label" parent="Menu/Data/CreatedLabel"]
margin_left = 371.666
margin_top = -1.968
margin_right = 979.666
margin_bottom = 58.032
custom_fonts/font = SubResource( 2 )
text = "Maximum: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Menu/Data"]

[node name="Buttons" type="HBoxContainer" parent="Menu"]
material = SubResource( 4 )
margin_left = 247.0
margin_top = 409.0
margin_right = 464.0
margin_bottom = 425.0
rect_scale = Vector2( 3, 3 )
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" parent="Menu/Buttons" instance=ExtResource( 7 )]
margin_left = 36.0
margin_right = 96.0
preview_text = "Create"
default_text = "upgradestation_create"
default_action_key = "ui_accept"

[node name="Cancel" parent="Menu/Buttons" instance=ExtResource( 7 )]
margin_left = 121.0
margin_right = 180.0
preview_text = "Cancel"
preview_texture = ExtResource( 9 )
default_text = "upgradestation_cancel"
default_action_key = "ui_cancel"

[node name="ConfirmationWindow" type="Control" parent="Menu"]
margin_left = 899.0
margin_top = -491.0
margin_right = 899.0
margin_bottom = 490.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/ConfirmationWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
color = Color( 0.0352941, 0.054902, 0.0705882, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HalfwayPoint" type="Position2D" parent="Menu/ConfirmationWindow"]
position = Vector2( 318.647, 488.246 )

[node name="Header" type="Label" parent="Menu/ConfirmationWindow"]
margin_left = 58.1786
margin_top = 154.107
margin_right = 666.179
margin_bottom = 214.107
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 2 )
text = "Confirm creation..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="Menu/ConfirmationWindow"]
margin_left = 61.47
margin_top = 237.619
margin_right = 669.47
margin_bottom = 297.619
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "Cost: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnedLabel" type="Label" parent="Menu/ConfirmationWindow/CostLabel"]
margin_left = 371.666
margin_right = 920.666
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Owned: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Menu/ConfirmationWindow"]
material = SubResource( 4 )
margin_left = 58.0
margin_top = 311.0
margin_right = 265.0
margin_bottom = 327.0
rect_scale = Vector2( 3, 3 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" parent="Menu/ConfirmationWindow/Buttons" instance=ExtResource( 7 )]
margin_right = 60.0
preview_text = "Create"
default_text = "upgradestation_create"
default_action_key = "ui_accept"

[node name="Cancel" parent="Menu/ConfirmationWindow/Buttons" instance=ExtResource( 7 )]
margin_left = 85.0
margin_right = 144.0
preview_text = "Cancel"
preview_texture = ExtResource( 9 )
default_text = "upgradestation_cancel"
default_action_key = "ui_cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
playback_speed = 1.5
anims/close_cofirmation = SubResource( 5 )
anims/open_confirmation = SubResource( 6 )

[node name="CameraPosition" type="Position2D" parent="."]
position = Vector2( 0, -110 )

[node name="Tween" type="Tween" parent="."]

[node name="MenuTween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_UpgradeStation_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_UpgradeStation_body_exited"]
